update final session
